# All_In_Poster

./: LICENSE  README.md  package-lock.json
Docs/: Архитектура.txt
all_in_poster/: package-lock.json  package.json
all_in_poster/scenarios/common/: Base Form.txt
all_in_poster/scenarios/facebook/: post.yaml
all_in_poster/scenarios/instagram/: media_post.yaml
all_in_poster/scenarios/twitter_x/: post.yaml
all_in_poster/src/: App.css  App.tsx
all_in_poster/src-tauri/: Cargo.toml  tauri.conf.json
all_in_poster/src-tauri/src/: lib.rs  main.rs
