[package]
name = "all_in_poster"
version = "0.1.0"
description = "All In Poster"
authors = ["You"]
license = ""
repository = ""
default-run = "all_in_poster"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "all_in_poster"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
url = "2.5" 

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
